[package]
name = "ai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dialoguer = { version = "0.12.0", features = [] }
eyre = "0.6.12"
regex = "1.12.3"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spinoff = "0.8.0"
